tests/error_tests/pprn_loop.err
resolver error: encountered cyclic dependency during preprocessor execution
 ==> ./tests/error_tests/pprn_loop.tau:1:1
1 |func test() -> int{
  |^^^^^^^^^ loop contains this element

resolver error: encountered cyclic dependency during preprocessor execution
 ==> ./tests/error_tests/pprn_loop.tau:4:1
4 |public func main() -> int{
  |^^^^^^^^^^^^^^^^ loop contains this element
